clusters/hive/apps/homeassistant/k8s-manifests/obsolete/addon-influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addon-influxdb
  namespace: homeassistant
spec:
  ingressClassName: traefik
  rules:
    - host: influxdb.home.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: addon-influxdb
                port:
                  number: 8086
            path: /
            pathType: Prefix
