clusters/hive/apps/homeassistant/k8s-manifests/obsolete/addon-influxdb-netpol-allow-from-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: addon-influxdb-allow-from-grafana
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: addon-influxdb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: grafana
    - podSelector:
        matchLabels:
          app: grafana
    ports:
    - protocol: TCP
      port: 8086
