clusters/hive/apps/homeassistant/k8s-manifests/obsolete/addon-mosquitto-netpol-allow-from-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: addon-mosquitto-allow-from-external
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: addon-mosquitto
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8  # or whatever your cluster nodes use
