clusters/hive/apps/homeassistant/k8s-manifests/obsolete/addon-tasmobackup-netpol-allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: addon-tasmobackup-allow-same-namespace
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      k8s-app: addon-tasmobackup
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
