clusters/hive/apps/homeassistant/k8s-manifests/obsolete/addon-vscode-netpol-allow-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: addon-vscode-allow-from-traefik
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: addon-vscode
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
