clusters/hive/apps/homeassistant/k8s-manifests/obsolete/homeassistant-netpol-allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homeassistant-allow-same-namespace
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: homeassistant
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
